--- a/education/75-attendance-calculator.html
+++ b/education/75-attendance-calculator.html
@@ -370,7 +370,7 @@ Everyday Life
     
 <div class="currency-or-unit-input">
   
-  <input class="result" inputmode="numeric" pattern="[0-9]*" value="75" type="text" id="requiredAttendanceOutput">
+  <input  inputmode="numeric" pattern="[0-9]*" value="75" type="text" id="requiredAttendanceOutput">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
