--- a/everyday-life/time-calculator.html
+++ b/everyday-life/time-calculator.html
@@ -275,16 +275,16 @@ Everyday Life
 </div>
 <div class="input-group-main-wrap">
   <div class="input-group">
-    <input class="result" type="text"   inputmode="numeric" pattern="[0-9]*" id="dayResult">
+    <input  type="text"   inputmode="numeric" pattern="[0-9]*" id="dayResult">
   </div>
   <div class="input-group">
-    <input   inputmode="numeric" pattern="[0-9]*" class="result"  type="text" id="hourResult">
+    <input   inputmode="numeric" pattern="[0-9]*"   type="text" id="hourResult">
   </div>
   <div class="input-group">
-    <input class="result"  type="text"   inputmode="numeric" pattern="[0-9]*" id="minuteResult">
+    <input   type="text"   inputmode="numeric" pattern="[0-9]*" id="minuteResult">
   </div>
   <div class="input-group">
-    <input class="result"  type="text"   inputmode="numeric" pattern="[0-9]*" id="secondResult">
+    <input   type="text"   inputmode="numeric" pattern="[0-9]*" id="secondResult">
   </div>
 </div>
 <div class="expanded-results"></div>
