--- a/finance/apy-calculator.html
+++ b/finance/apy-calculator.html
@@ -447,7 +447,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="Finaldeposit">
+    <input type="text"    inputmode="numeric" pattern="[0-9]*" id="Finaldeposit">
   </div>
   <div class="input-options">
    <div class="input-options-item">
