--- a/finance/bond-calculator.html
+++ b/finance/bond-calculator.html
@@ -463,7 +463,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display">$
   </span>
-    <input type="text" id="bond-result"   inputmode="numeric" pattern="[0-9]*" class="result">
+    <input type="text" id="bond-result"   inputmode="numeric" pattern="[0-9]*" >
     </div>
     <div class="input-options">
    <div class="input-options-item">
