--- a/finance/cd-calculator.html
+++ b/finance/cd-calculator.html
@@ -453,7 +453,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*"  id="Final balance">
+    <input type="text"    inputmode="numeric" pattern="[0-9]*"  id="Final balance">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -498,7 +498,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="InterestEarned">
+  <input type="text"    inputmode="numeric" pattern="[0-9]*" id="InterestEarned">
   </div>
   <div class="input-options">
    <div class="input-options-item">
