--- a/finance/custom-duty-calculator-for-vehicles-nigeria.html
+++ b/finance/custom-duty-calculator-for-vehicles-nigeria.html
@@ -303,7 +303,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="vehicleValueNGN">
+  <input    inputmode="numeric" pattern="[0-9]*" type="text" id="vehicleValueNGN">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -348,7 +348,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="importDuty">
+  <input    inputmode="numeric" pattern="[0-9]*" type="text" id="importDuty">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -393,7 +393,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="levy">
+  <input    inputmode="numeric" pattern="[0-9]*" type="text" id="levy">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -438,7 +438,7 @@ Everyday Life
      <div class="currency-or-unit-input">
    <span class="unit-display">₦
    </span>
-   <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="surcharge">
+   <input    inputmode="numeric" pattern="[0-9]*" type="text" id="surcharge">
  </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -483,7 +483,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="etl">
+  <input    inputmode="numeric" pattern="[0-9]*" type="text" id="etl">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -528,7 +528,7 @@ Everyday Life
     <div class="currency-or-unit-input">
    <span class="unit-display">₦
    </span>
-   <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="vat">
+   <input    inputmode="numeric" pattern="[0-9]*" type="text" id="vat">
  </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -573,7 +573,7 @@ Everyday Life
     <div class="currency-or-unit-input">
    <span class="unit-display">₦
    </span>
-   <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="totalCustomsCharges">
+   <input    inputmode="numeric" pattern="[0-9]*" type="text" id="totalCustomsCharges">
  </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -618,7 +618,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="totalVehicleCost">
+  <input    inputmode="numeric" pattern="[0-9]*" type="text" id="totalVehicleCost">
 </div>
     <div class="input-options">
    <div class="input-options-item">
