--- a/finance/mobile-app-ad-revenue-calculator.html
+++ b/finance/mobile-app-ad-revenue-calculator.html
@@ -387,7 +387,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" id="estimatedRevenue" class="result">
+    <input type="text" id="estimatedRevenue" >
     </div>
     <div class="input-options">
    <div class="input-options-item">
