--- a/finance/sales-tax-calculator.html
+++ b/finance/sales-tax-calculator.html
@@ -354,7 +354,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text"   inputmode="numeric" pattern="[0-9]*" class="result" id="taxAmount" />
+  <input type="text"   inputmode="numeric" pattern="[0-9]*"  id="taxAmount" />
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -402,7 +402,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input class="result" type="text" id="totalPrice"   inputmode="numeric" pattern="[0-9]*"/>
+  <input  type="text" id="totalPrice"   inputmode="numeric" pattern="[0-9]*"/>
   </div>
   <div class="input-options">
    <div class="input-options-item">
