--- a/finance/vat-calculator.html
+++ b/finance/vat-calculator.html
@@ -350,7 +350,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="vatAmount"   inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="vatAmount"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -396,7 +396,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text"   inputmode="numeric" pattern="[0-9]*" class="result" id="resultPrice" >
+    <input type="text"   inputmode="numeric" pattern="[0-9]*"  id="resultPrice" >
     </div>
     <div class="input-options">
    <div class="input-options-item">
