--- a/food/grams-to-cups-converter.html
+++ b/food/grams-to-cups-converter.html
@@ -316,7 +316,7 @@ Everyday Life
   <div class="input-group">
     
     <div class="input-select-wrap">
-      <input style="flex-basis: 50%;"   inputmode="numeric" pattern="[0-9]*" type="text" class="result" id="cupsOutput" />
+      <input style="flex-basis: 50%;"   inputmode="numeric" pattern="[0-9]*" type="text"  id="cupsOutput" />
       <select style="flex-basis: 50%;" id="cupType">
         <option value="US customary cups (recipes) (US cups)">US Cups</option>
         <option value="US legal cups (nutrition) (US legal cups)">US legal cups</option>
