--- a/health/ovulation-calculator.html
+++ b/health/ovulation-calculator.html
@@ -265,20 +265,20 @@ Everyday Life
 
 <div class="input-group">
   <label>Ovulation day </label>
-  <input class="result" type="date" id="ovulationDayOne" />
+  <input  type="date" id="ovulationDayOne" />
 </div>
 <div class="input-group">
   <label>First day of fertility window </label>
-  <input class="result" type="date" id="firstDayofFertilityWindowOne" />
+  <input  type="date" id="firstDayofFertilityWindowOne" />
 </div>
 <div class="input-group">
   <label>Last day of fertility window </label>
-  <input class="result" type="date" id="lastDayofFertilityWindowOne" />
+  <input  type="date" id="lastDayofFertilityWindowOne" />
 </div>
 
 <div class="input-group">
   <label>Due date </label>
-  <input class="result" type="date" id="duedateOne" />
+  <input  type="date" id="duedateOne" />
 </div>
 <div class="input-options">
    <div class="input-options-item">
@@ -311,20 +311,20 @@ Everyday Life
 
   <div class="input-group">
     <label>Ovulation day </label>
-    <input class="result" type="date" id="ovulationDayTwo" />
+    <input  type="date" id="ovulationDayTwo" />
   </div>
   <div class="input-group">
     <label>First day of fertility window </label>
-    <input class="result" type="date" id="firstDayofFertilityWindowTwo" />
+    <input  type="date" id="firstDayofFertilityWindowTwo" />
   </div>
   <div class="input-group">
     <label>Last day of fertility window </label>
-    <input class="result" type="date" id="lastDayofFertilityWindowTwo" />
+    <input  type="date" id="lastDayofFertilityWindowTwo" />
   </div>
   
   <div class="input-group">
     <label>Due date </label>
-    <input class="result" type="date" id="duedateTwo" />
+    <input  type="date" id="duedateTwo" />
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -358,20 +358,20 @@ Everyday Life
 
   <div class="input-group">
     <label>Ovulation day </label>
-    <input class="result" type="date" id="ovulationDayThree" />
+    <input  type="date" id="ovulationDayThree" />
   </div>
   <div class="input-group">
     <label>First day of fertility window </label>
-    <input class="result" type="date" id="firstDayofFertilityWindowThree" />
+    <input  type="date" id="firstDayofFertilityWindowThree" />
   </div>
   <div class="input-group">
     <label>Last day of fertility window </label>
-    <input class="result" type="date" id="lastDayofFertilityWindowThree" />
+    <input  type="date" id="lastDayofFertilityWindowThree" />
   </div>
   
   <div class="input-group">
     <label>Due date </label>
-    <input class="result" type="date" id="duedateThree" />
+    <input  type="date" id="duedateThree" />
   </div>
   <div class="input-options">
    <div class="input-options-item">
