--- a/math/percentage-calculator.html
+++ b/math/percentage-calculator.html
@@ -225,7 +225,7 @@ Everyday Life
 </div>
 <div class="input-group">
   <label>Answer</label>
-  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="percentageSecOneResult"  class="result"/>
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="percentageSecOneResult"  />
 </div>
 <div class="input-options">
    <div class="input-options-item">
@@ -267,7 +267,7 @@ Everyday Life
   
   <div class="input-group">
     <label>Answer</label>
-    <input type="text"   inputmode="numeric" pattern="[0-9]*" class="result" id="percentageSecTwoResult"  />
+    <input type="text"   inputmode="numeric" pattern="[0-9]*"  id="percentageSecTwoResult"  />
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -314,7 +314,7 @@ Everyday Life
   </div>
   <div class="input-group">
     <label>Answer</label>
-    <input   inputmode="numeric" pattern="[0-9]*" type="text" class="result" id="percentageSecThreeResult"  />
+    <input   inputmode="numeric" pattern="[0-9]*" type="text"  id="percentageSecThreeResult"  />
     
   </div>
   <div class="input-options">
