--- a/other/ctr-calculator.html
+++ b/other/ctr-calculator.html
@@ -285,7 +285,7 @@ Everyday Life
     
 <div class="currency-or-unit-input">
   
-  <input inputmode="numeric" pattern="[0-9]*" type="text" id="ctrOutput" class="result">
+  <input inputmode="numeric" pattern="[0-9]*" type="text" id="ctrOutput" >
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
