--- a/other/facebook-money-calculator.html
+++ b/other/facebook-money-calculator.html
@@ -296,7 +296,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*" >
+    <input type="text"  id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*" >
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -340,7 +340,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input   inputmode="numeric" pattern="[0-9]*"  type="text" class="result" id="monthlyRevenue">
+    <input   inputmode="numeric" pattern="[0-9]*"  type="text"  id="monthlyRevenue">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -385,7 +385,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="yearlyRevenue"   inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="yearlyRevenue"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
