--- a/other/whop-revenue-calculator.html
+++ b/other/whop-revenue-calculator.html
@@ -292,7 +292,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -337,7 +337,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -382,7 +382,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="yearlyRevenue"    inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="yearlyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
