--- a/other/youtube-ad-revenue-calculator.html
+++ b/other/youtube-ad-revenue-calculator.html
@@ -295,7 +295,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -340,7 +340,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -385,7 +385,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="yearlyRevenue">
+    <input type="text"    inputmode="numeric" pattern="[0-9]*" id="yearlyRevenue">
     </div>
     <div class="input-options">
    <div class="input-options-item">
