--- a/other/youtube-cpm-calculator.html
+++ b/other/youtube-cpm-calculator.html
@@ -293,7 +293,7 @@ Everyday Life
 <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-<input  type="text" id="cpmOutput" class="result"   inputmode="numeric" pattern="[0-9]*">
+<input  type="text" id="cpmOutput"    inputmode="numeric" pattern="[0-9]*">
 </div>
 <div class="input-options">
    <div class="input-options-item">
