--- a/physics/bullet-energy-calculator.html
+++ b/physics/bullet-energy-calculator.html
@@ -312,7 +312,7 @@ Everyday Life
 
     </label>
     <div class="input-select-wrap">
-    <input class="result" inputmode="numeric" pattern="[0-9]*" type="text" id="bulletEnergy" min="0" step="any">
+    <input  inputmode="numeric" pattern="[0-9]*" type="text" id="bulletEnergy" min="0" step="any">
     <select id="bulletEnergyUnit">
 
   <option value="joules">J</option>
