--- a/statistics/risk-calculator.html
+++ b/statistics/risk-calculator.html
@@ -294,7 +294,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="RiskOne">
+  <input type="text"    inputmode="numeric" pattern="[0-9]*" id="RiskOne">
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -435,7 +435,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="RiskTwo">
+    <input type="text"    inputmode="numeric" pattern="[0-9]*" id="RiskTwo">
     </div>
     <div class="input-options">
    <div class="input-options-item">
