--- a/conversion/minutes-to-hours-converter.html
+++ b/conversion/minutes-to-hours-converter.html
@@ -357,14 +357,14 @@ Everyday Life
     <label>Time<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
     
      <div style="display: flex;gap: 3px;" class="currency-or-unit-input">
-       <input style="text-align: center;padding: 0;"   inputmode="numeric" pattern="[0-9]*" type="text" id="hoursResult" class="result">
+       <input style="text-align: center;padding: 0;"   inputmode="numeric" pattern="[0-9]*" type="text" id="hoursResult" >
 <span class="unit-display">hrs 
 </span>
-       <input style="text-align: center;padding: 0;"   inputmode="numeric" pattern="[0-9]*" type="text" id="minutesResult" class="result">
+       <input style="text-align: center;padding: 0;"   inputmode="numeric" pattern="[0-9]*" type="text" id="minutesResult" >
    <span class="unit-display">min
 </span>
 
-   <input style="text-align: center;padding: 0;font-size: .9em;"   inputmode="numeric" pattern="[0-9]*" type="text" id="secondsResult" class="result">
+   <input style="text-align: center;padding: 0;font-size: .9em;"   inputmode="numeric" pattern="[0-9]*" type="text" id="secondsResult" >
    <span class="unit-display">sec
    </span>
  </div>
