--- a/food/coffee-calculator.html
+++ b/food/coffee-calculator.html
@@ -409,7 +409,7 @@ Everyday Life
 </div>
 <div data-input-id="number-of-portions-coffee-calculator" class="input-group">
   <label>Number of portions <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
-  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="NumberOfPortions" class="result">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="NumberOfPortions" >
   <div class="input-options">
    <div class="input-options-item">
   <svg class="description-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M200-120v-640q0-33 23.5-56.5T280-840h400q33 0 56.5 23.5T760-760v640L480-240 200-120Zm80-122 200-86 200 86v-518H280v518Zm0-518h400-400Z"/></svg>
@@ -462,7 +462,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   
-  <input   inputmode="numeric" pattern="[0-9]*" class="result" type="text" id="" value="" />
+  <input   inputmode="numeric" pattern="[0-9]*"  type="text" id="" value="" />
   <span style="padding-right: 10px;" class="unit-display" >mg
   </span>
 </div>
@@ -507,7 +507,7 @@ Everyday Life
   
   <div class="currency-or-unit-input">
   
-  <input   inputmode="numeric" pattern="[0-9]*" class="result" type="text" id="totalCaffeine"/>
+  <input   inputmode="numeric" pattern="[0-9]*"  type="text" id="totalCaffeine"/>
   <span style="padding-right: 10px;" class="unit-display" >mg
   </span>
 </div>
