--- a/math/percent-off-calculator.html
+++ b/math/percent-off-calculator.html
@@ -387,7 +387,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input class="result" inputmode="numeric" pattern="[0-9]*" type="text" id="finalPrice" >
+    <input  inputmode="numeric" pattern="[0-9]*" type="text" id="finalPrice" >
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -433,7 +433,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input class="result" inputmode="numeric" pattern="[0-9]*" type="text" id="savings">
+    <input  inputmode="numeric" pattern="[0-9]*" type="text" id="savings">
     </div>
     <div class="input-options">
    <div class="input-options-item">
