--- a/other/tiktok-money-calculator.html
+++ b/other/tiktok-money-calculator.html
@@ -294,7 +294,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -339,7 +339,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -384,7 +384,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="yearlyRevenue"    inputmode="numeric" pattern="[0-9]*">
+    <input type="text"  id="yearlyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
