--- a/other/website-bandwidth-calculator.html
+++ b/other/website-bandwidth-calculator.html
@@ -353,7 +353,7 @@ Everyday Life
   
      <div class="currency-or-unit-input">
    
-   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="EstimatedMonthlyBandwidth" class="result">
+   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="EstimatedMonthlyBandwidth" >
    <span style="padding-right: 10px;letter-spacing: 1px;" class="unit-display">GB/month
    </span>
  </div>
