--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -437,7 +437,7 @@ Everyday Life
   <label style="margin-top: 25px;">Required Views <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
   
   <div class="currency-or-unit-input">
-  <input class="result"   inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="RequiredViews">
+  <input    inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="RequiredViews">
   <span style="padding-right: 10px;" class="unit-display">views
   </span>
 </div>
