--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -466,13 +466,7 @@ Why this is important: a small miscalculation in seed rate will result in a eith
  by weight of a thousand grains and the real world factors such as reduced germination and field losses to ensure your sowing recommendations are the same as what actually comes out of the field.
 </p><p>
 Calculate the number of tonnes to buy at an approximation of the nearest tonne to budget correctly to calculate the kilograms of your drill that are required to calibrate planters and to compare the amount of seed you require between different crops and treatments using the calculator. Its outputs are converted into common units such that you can directly input the numbers in planter settings pre supply orders or farm management records.
-</p><h2 id="toc">Table of Contents</h2><ul>
-  <li><a href="#what_is_seed_rate">What is a seed rate</a></li>
-  <li><a href="#how_to_calculate_manually">How to calculate seed rate manually</a></li>
-  <li><a href="#how_to_use_calculator">How to use our seed rate calculator</a></li>
-  <li><a href="#difference_between_topics">Difference between seed rate and planting density</a></li>
-  <li><a href="#faq">FAQs</a></li>
-</ul><h2 id="what_is_seed_rate">What is a seed rate</h2>
+</p><h2 id="what_is_seed_rate">What is a seed rate</h2>
 
 <p>
  This is the quantity of seed sown on a hectare of land that is measured in kilograms per hectare seeds on hectare or in some cases the number of seeds per linear meter of row. Fundamentally seed rate is a number of planning. It is the number of seeds to place in the soil that will result in the required plant population after the germination emergence and early survival are factors are considered.
