--- a/conversion/roman-numeral-converter.html
+++ b/conversion/roman-numeral-converter.html
@@ -311,23 +311,13 @@ Clear all changes
 80 = LXXX
 4 = IV
 Total = MCMLXXXIV</pre>
-    This mirrors the teaching approach used by popular calculators and feels like a short guided explanation rather than dense technical output. Omni Calculator and similar tools provide this kind of readable breakdown, and it’s effective because it builds understanding as well as giving results. 4
-  </p>  <p>
-    <strong>5) Edge cases and user-friendly messaging</strong><br>
-    Edge cases include attempts to convert “0”, negative numbers, decimals, or malformed Roman strings. Instead of blunt “error” language, give helpful, humanized messages that explain the problem and how to fix it (for example: “I can’t convert zero — try a positive whole number” or “That Roman numeral looks nonstandard; try using IV for four rather than IIII”). If the calculator supports overlines for thousands, show a short note explaining the convention and give an example input format; if it doesn’t, explain the 3,999 limit clearly. Many converters explicitly reject numbers above 3,999,999 for typographic and historical consistency; when you reject input, explain the reason so users aren’t left guessing. 5
-  </p>  <h2>FAQs</h2>
+     <h2>FAQs</h2>
   <p>
     <strong>Can Roman numerals represent zero?</strong><br>
     No. The Roman numeral system has no symbol for zero. The system was designed for counting and labeling rather than positional arithmetic, so zero — a concept that is central to place-value systems like Arabic numerals — does not exist in traditional Roman notation. For computations, people historically used other methods or adopted alternative numerical systems. 6
   </p>  <p>
     <strong>Why do some clock faces use IIII instead of IV?</strong><br>
     This is largely a typographic and aesthetic tradition. On many clock dials the use of IIII instead of IV balances the dial visually (it keeps a symmetry of characters around the face) and has become an accepted stylistic choice for some clockmakers. It’s not a mathematical rule; it’s a convention used for appearance. 7
-  </p>  <p>
-    <strong>What’s the largest number I can convert with a Roman numeral converter?</strong><br>
-    That depends on whether the tool supports the vinculum (overline) convention. The “classical” system is typically presented up to 3,999 (MMMCMXCIX). Tools that support an overline — which multiplies the marked numeral by 1,000 — can commonly represent values up to 3,999,999. Converters should state their limits clearly and explain how they handle overlines or other extended notation. 8
-  </p>  <p>
-    <strong>Why does the calculator reject certain Roman numerals even if they “look” like numbers?</strong><br>
-    Some combinations are historically nonstandard or ambiguous (for example, using IC to mean 99 is nonstandard; the accepted form is XCIX). A reliable converter enforces conventional subtractive rules so its output is predictable and consistent. If you need support for nonstandard or decorative forms, the tool should say so and provide guidance on how those will be interpreted or rejected.
   </p>  
 </div>
   </section>
