--- a/math/decimal-to-percent-converter.html
+++ b/math/decimal-to-percent-converter.html
@@ -336,13 +336,8 @@ Clear all changes
     What makes this converter especially useful is not only the two-way conversion (decimal → percent and percent → decimal) but also how it handles real-world input issues: numbers with commas, negative values, zeros, values greater than one, and small decimals that require precision. The tool avoids surprises by clearly marking programmatic updates (so you can see which field was computed) while leaving the value you typed untouched. That means you can paste a value like <strong>1,234.56</strong> or type <strong>0.005</strong> and get accurate, human-friendly output immediately.
   </p>  <p>
     Whether you need a quick mental-math check, are preparing data for a report, or teaching students the mechanics of conversion, this converter saves time and prevents common mistakes such as moving the decimal in the wrong direction or confusing percentage points with percent change. Use it to validate hand calculations, double-check spreadsheets, or learn the simple rules that govern percent and decimal relationships.
-  </p>  <!-- Table of contents with links to sections -->  <h2>Table of contents</h2>
-  <ul>
-    <li><a href="#what-are-decimals">What are decimals?</a></li>
-    <li><a href="#what-are-percentages">What are percentages?</a></li>
-    <li><a href="#how-to-convert">How to convert decimal to percent manually?</a></li>
-    <li><a href="#faq">FAQs</a></li>
-  </ul>  <!-- 1. What are decimals? (≥600 words) -->  <h2 id="what-are-decimals">What are decimals?</h2>
+  </p>
+  <h2 id="what-are-decimals">What are decimals?</h2>
   <p>
     Decimals are a way to represent numbers that include a fractional part using a base-10 positional system. In everyday arithmetic and measurement, decimals let you express values between whole numbers without writing fractions. The decimal system relies on a decimal point (in English notation the “.” character) to separate the integer (whole number) portion on the left from the fractional portion on the right. For example, the number <strong>12.345</strong> represents twelve and three hundred forty-five thousandths: twelve plus 0.345 (which is 345/1000).
   </p>  <p>
