--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -13,10 +13,9 @@
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="title" content="Herbicide Dosage Calculator | IITA Free Tool for Farmers & Agronomists">
-<meta name="description" content="Herbicide Dosage Calculator by IITA. Calculate correct herbicide rates for farms, fields, and gardens. Ideal for farmers, agronomists, extension workers, and researchers.">
+<meta name="title" content="Herbicide Dosage Calculator">
+<meta name="description" content="Determine dosage of herbicides to use on knapsack sprayers in seconds.">
 
-<meta name="calclulo" content="IITA - International Institute of Tropical Agriculture">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://calclulo.com/agriculture/herbicide-calculator">
 
@@ -428,24 +427,6 @@ Clear all changes
     </div>
 <div class="description-txt">
 
- <p>
-   The application rates and calculations of herbicides may differ considerably depending on the farming methods and size of the land along with the local recommendations. This is the herbicide calculator, which adheres to common procedures common in farmland, particularly small scale farmers in areas such as Africa, South America, and some of Asia. The tool assists in converting dosage levels of a herbicide to smaller pieces of land making sure to apply it effectively and correctly even when dealing with small plots and hand-held sprayers.
- </p>
-
- <p>
-   As an illustration, dosage of herbicides is usually in liters/hectare (L/Ha), which is convenient in massive farming but not realistic when working with smaller farms or gardens. This calculator will then translate those values into the useful units of milliliters of herbicide needed to spray a tank on your specific equipment and water consumption. This method minimizes waste, expenses and chances of excessive application that may be detrimental to crops and the environment.
- </p>
- <p>
-   It is worth mentioning that the volume of the spray may also be affected by the type of sprayers used, the nozzle adjustment, and the density of the targeted weed. Mixed inconsistently or with the wrong dosage may result in a poor weed control or unintentional damage to good plants. This is made easier by our tool which asks for the most important inputs like water volume per 100 square meters and sprayer capacity. With these values, the calculator can give an accurate calculation of the amount of herbicide needed in the tank, resulting in effective and safe application of the herbicide in agreement with the best practices of agriculture.
- </p>
- 
- <p>
-   Moreover, smallholder farmers tend to employ manual or knapsack sprayers that have low tank capacities and therefore, it is very important to make accurate calculations every time they are refilled. Imprecise conversions of herbicide will result in poor weed management or even legal matters concerning excessive use of the chemicals. To this end, we offer useful calculations that are applicable to both field and garden contexts, which are adjusted to the context of small-scale farming in such countries as Nigeria, where the organizations like the International Institute of Tropical Agriculture (IITA) encourage the use of safe and efficient farming tools.
- </p>
-
- <p>
-   This herbicide calculator is meant to encourage responsible use of chemicals, help the farmers to sustain their agriculture and to maximize their crop production, as well as, safeguard their crop and environment. This tool will enable farmers to use herbicides with a lot of confidence, efficiency, and safety by giving them clear and easy to understand results based on globally accepted units.
- </p>
 </div>
   </section>
 
