--- a/everyday-life/earth-day-countdown.html
+++ b/everyday-life/earth-day-countdown.html
@@ -226,18 +226,9 @@ Clear all changes
         <a href="/everyday-life/new-year-countdown-calculator">New Year Countdown</a>
       </div>
     </div>
-</div><div class="description-txt">
-  <p>
-    Calclulo is counting down to the day we all come together for the planet. Our <strong>Earth Day Countdown</strong> shows exactly how many <strong>days</strong>, hours, minutes, and seconds remain until the next Earth Day.
-  </p>
-  
-  <p>
-    Whether you're planting trees, organizing cleanups, or simply reflecting on the environment, this live countdown keeps the focus on action. It updates every second so you’re always in sync with the moment of celebration and awareness.
-  </p>
-  
-  <p>
-    Calclulo handles the countdown while you prepare to make a difference for the earth.
-  </p>
+</div>
+<div class="description-txt">
+
 </div>
   </section>
   
