--- a/agriculture.html
+++ b/agriculture.html
@@ -11,18 +11,14 @@
 
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
 <meta name="title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
-<meta name="description" content="Access a powerful set of free agriculture calculators. Calculate seed rate, fertilizer mix, crop yield, pesticide usage, and more — built for farmers, gardeners, and researchers.">
+<meta name="description" content="Discover a fantastic collection of free agriculture calculators that are here to simplify your farming decisions.">
 
-<meta name="robots" content="index, follow">
 <link rel="canonical" href="https://calclulo.com/agriculture">
-
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/agriculture">
