--- a/agriculture.html
+++ b/agriculture.html
@@ -21,10 +21,10 @@
 <link rel="canonical" href="https://calclulo.com/agriculture">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/agriculture">
-<meta property="og:title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
-<meta property="og:description" content="Calculate seed rate, crop yield, fertilizers, pesticides, and more with this free collection of farming calculators. Trusted by agricultural professionals.">
-<meta property="og:image" content="https://calclulo.com/assets/agriculture-thumbnail.jpg">
+<meta property="og:title" content="Discover a fantastic collection of free agriculture calculators that are here to simplify your farming decisions.">
+<meta property="og:description" content="Discover a fantastic collection of free agriculture calculators that are here to simplify your farming decisions.">
+
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
