--- a/agriculture.html
+++ b/agriculture.html
@@ -21,7 +21,7 @@
 <link rel="canonical" href="https://calclulo.com/agriculture">
 
 <meta property="og:type" content="website">
-<meta property="og:title" content="Discover a fantastic collection of free agriculture calculators that are here to simplify your farming decisions.">
+<meta property="og:title" content="Agriculture Calculators">
 <meta property="og:description" content="Discover a fantastic collection of free agriculture calculators that are here to simplify your farming decisions.">
 
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
