--- a/agriculture.html
+++ b/agriculture.html
@@ -38,8 +38,12 @@
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
-      "name": "Your Brand Name",
-      "url": "https://calclulo.com"
+      "name": "Calclulo",
+      "url": "https://calclulo.com",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://calclulo.com/assets/images/Calclulo Logo.svg"
+      }
     }
   }
 </script>
